DNN-7888: Fixed missing border issue

--- a/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/style.less
@@ -43,6 +43,9 @@
         }
         .add-setting-editor {
             float: left;
+            .collapsible-component1.false {
+                border-bottom: 0;
+            }
         }
     }
     .add-setting-row {
